--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -97,12 +97,12 @@ jobs:
             "https://esm.sh/v135/typescript@5.3.3/es2022/typescript.mjs"
           )
 
-          // TODO hyperfine
-
           for url in "${strings[@]}"; do
               curl -sS $url > input.js
               echo "--- debug: $url ---"
               cargo run -p ezno-parser --example parse input.js --timings --render-timings
               echo "--- release: $url ---"
               cargo run -p ezno-parser --release --example parse input.js --timings --render-timings
+
+              hyperfine "./target/debug/examples/parse input.js" "./target/release/examples/parse input.js"
           done
