--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,6 +45,17 @@ base64 = "0.21"
 enum-variants-strings = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+simple-json-parser = "0.0.2"
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+# For updating binary
+self-replace = "1.3.7"
+# For updating binary and possibly more in the future
+native-tls = "0.2.11"
+# For CLI input across multiple lines
+multiline-term-input = "0.1.0"
+# For watching files
+notify = "6.1.0"
 
 [dependencies.checker]
 path = "./checker"
@@ -65,15 +76,6 @@ serde-wasm-bindgen = "0.6.3"
 console_error_panic_hook = "0.1.7"
 js-sys = "0.3"
 tsify = "0.4.5"
-
-[target.'cfg(not(target_family = "wasm"))'.dependencies]
-multiline-term-input = "0.1.0"
-notify = "6.1.0"
-
-# TODO temporary testing, doesn't change API (or break anything)
-[patch.crates-io]
-source-map = { git = 'https://github.com/kaleidawave/source-map.git', branch = 'codespan-use-str' }
-codespan-reporting = { git = 'https://github.com/kaleidawave/codespan.git', branch = 'static-dispatch-writecolor' }
 
 [workspace.lints.clippy]
 all = "deny"
