Parser and CLI updates (#145)
* Parser and CLI updates
- Add asserts type (technically function return type)
- Add `as` for inteface rule + more
- Add binary *self-upgrade* system
- Start on #81 with allowing multiple entry points
- Rename some examples
- Add 'pretty-printing' example
- Update fuzzing lock file (should fix them)
- Improvements to the info command and upgrade command output
- Clippy fixes
- Still a fuzzing issue but we will move

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -60,6 +60,7 @@ jobs:
 
           \`\`\`ts
           // $LINES_OF_CODE lines of TypeScript generated from specification.md
+          // this is not meant to accurately represent a program but instead give an idea for how it scales across all the type checking features
           $(cat ./demo.ts)
           \`\`\`
           </details>
@@ -97,12 +98,12 @@ jobs:
             "https://esm.sh/v135/typescript@5.3.3/es2022/typescript.mjs"
           )
 
-          // TODO hyperfine
-
           for url in "${strings[@]}"; do
               curl -sS $url > input.js
               echo "--- debug: $url ---"
               cargo run -p ezno-parser --example parse input.js --timings --render-timings
               echo "--- release: $url ---"
               cargo run -p ezno-parser --release --example parse input.js --timings --render-timings
+
+              hyperfine "./target/debug/examples/parse input.js" "./target/release/examples/parse input.js"
           done
