--- a/parser/Cargo.toml
+++ b/parser/Cargo.toml
@@ -53,25 +53,25 @@ macro_rules_attribute = { version = "0.2.0" }
 serde = { version = "1.0", features = ["derive"], optional = true }
 self-rust-tokenize = { version = "0.3", optional = true }
 
-source-map = { version = "0.14", features = [
+source-map = { version = "0.15", features = [
   "serde-serialize",
   "self-rust-tokenize",
 ] }
 
 # Needs buffered and not parralel for WASM
 [target.'cfg(target_family = "wasm")'.dependencies]
-tokenizer-lib = { version = "1.5.1", features = [
+tokenizer-lib = { version = "1.6", features = [
   "buffered",
   "sized-tokens",
-], default_features = false }
+], default-features = false }
 tsify = "0.4.5"
 wasm-bindgen = "0.2"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
-tokenizer-lib = { version = "1.5.1", features = [
+tokenizer-lib = { version = "1.6", features = [
   "parallel",
   "sized-tokens",
-], default_features = false }
+], default-features = false }
 
 [dev-dependencies]
 pretty_assertions = "1.3.0"
