Lots of internal changes (WIP) - Change subtyping to use single state structure (rather than generic structures) - Change substitution to use single immutable object for arguments - Changes to accomodate the above - `* extends * ? `, `infer U` and distributive extends - Add `never` #136 + or folding - Other WIP stuff

--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -72,7 +72,7 @@ jobs:
           <summary>Diagnostics</summary>
           
           \`\`\`
-          $(./target/release/ezno check demo.ts --timings || true)
+          $(./target/release/ezno check demo.ts --timings 2>&1 || true)
           \`\`\`
           </details>
           " >> $GITHUB_STEP_SUMMARY
