--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -72,8 +72,7 @@ jobs:
           echo "SPONSORS=$SPONSORS" >> $GITHUB_OUTPUT
 
           CONTRIBUTORS=$(
-            gh pr list --search "-author:@me" --state merged --json author 
-            | jq 'map(.author.name) | unique | join(",")'
+            gh pr list --search "-author:@me" --state merged --json author | jq 'map(.author.name) | unique | join(",")' --raw-output
           )
 
           echo "CONTRIBUTORS=$CONTRIBUTORS" >> $GITHUB_OUTPUT
