--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -20,7 +20,6 @@
     "@codemirror/view": "^6.23.0",
     "@lezer/highlight": "^1.2.0",
     "@lezer/javascript": "^1.4.13",
-    "ezno": "=0.0.21",
-    "lz-string": "^1.5.0"
+    "ezno": "=0.0.21"
   }
 }
