--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ enum-variants-strings = "0.3"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-json-parser = "0.0.2"
+glob = "0.3"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
