--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -50,23 +50,23 @@ jobs:
         shell: bash
         run: |
           # Generate a file which contains everything that Ezno currently implements  
-          cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md ./demo.ts
+          cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md --out ./demo.tsx
           echo "::info::Finished file generation"
 
-          LINES_OF_CODE=$(scc -c --no-cocomo -f json demo.ts | jq ".[0].Code")
+          LINES_OF_CODE=$(scc -c --no-cocomo -f json demo.tsx | jq ".[0].Code")
 
           echo "### Checking
           \`\`\`shell
-          $(hyperfine -i './target/release/ezno check demo.ts')
+          $(hyperfine -i './target/release/ezno check demo.tsx')
           \`\`\`" >> $GITHUB_STEP_SUMMARY
 
           echo "<details>
           <summary>Input</summary>
 
-          \`\`\`ts
+          \`\`\`tsx
           // $LINES_OF_CODE lines of TypeScript generated from specification.md
           // this is not meant to accurately represent a program but instead give an idea for how it scales across all the type checking features
-          $(cat ./demo.ts)
+          $(cat ./demo.tsx)
           \`\`\`
           </details>
           " >> $GITHUB_STEP_SUMMARY
@@ -77,7 +77,7 @@ jobs:
           <summary>Diagnostics</summary>
           
           \`\`\`
-          $(./target/release/ezno check demo.ts --timings --max-diagnostics all 2>&1 || true)
+          $(./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1 || true)
           \`\`\`
           </details>
           " >> $GITHUB_STEP_SUMMARY
