--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -29,18 +29,6 @@ jobs:
         with:
           packages: hyperfine
 
-      # For displaying line count in file
-      - name: Download scc
-        run: |
-          mkdir scc
-          cd scc
-          gh release download v3.1.0 -R boyter/scc -p '*Linux_x86_64.tar.gz' -O scc.tar.gz
-          tar -xf scc.tar.gz
-          chmod +x scc
-          pwd >> $GITHUB_PATH
-        env:
-          GH_TOKEN: ${{ github.token }}
-
       - name: Build Ezno
         run: cargo build --release
         env:
@@ -48,11 +36,10 @@ jobs:
 
       - name: Run checker performance
         shell: bash
+        continue-on-error: true
         run: |
           # Generate a file which contains everything that Ezno currently implements  
           cargo run -p ezno-parser --example code_blocks_to_script ./checker/specification/specification.md --comment-headers --out ./demo.tsx
-
-          LINES_OF_CODE=$(scc -c --no-cocomo -f json demo.tsx | jq ".[0].Code")
 
           echo "### Checking
           \`\`\`shell
@@ -62,10 +49,8 @@ jobs:
           echo "<details>
           <summary>Input</summary>
 
+          > Code generated from specification.md. this is not meant to accurately represent a program but instead give an idea for how it scales across all the type checking features
           \`\`\`tsx
-          // $LINES_OF_CODE lines of TypeScript generated from specification.md
-          // this is not meant to accurately represent a program but instead give an idea 
-          // for how it scales across all the type checking features
           $(cat ./demo.tsx)
           \`\`\`
           </details>
@@ -77,10 +62,21 @@ jobs:
           <summary>Diagnostics</summary>
           
           \`\`\`
-          $(./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1 || true)
+          $(./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1)
           \`\`\`
           </details>
           " >> $GITHUB_STEP_SUMMARY
+
+      - name: Run checker performance w/staging
+        shell: bash
+        if: github.event_name == 'pull_request'
+        continue-on-error: true
+        run: |
+          ::group::Running all
+          cat ./checker/specification/specification.md ./checker/specification/staging.md > all.md
+          cargo run -p ezno-parser --example code_blocks_to_script all.md --comment-headers --out ./demo.tsx
+          ./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1
+          ::endgroup::
 
       - name: Run parser, minfier/stringer performance
         shell: bash
