--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -59,11 +59,13 @@ jobs:
           echo "::info::Wrote code to summary"
           
           command_output=$(./target/release/ezno check demo.tsx --timings --max-diagnostics all 2>&1)
-          diagnostics=""; statistics=""; found_splitter=false
+          diagnostics=""; statistics=""; found_splitter=false;
+
+          echo "$command_output"
 
           while IFS= read -r line; do
-              if [[ "$line" == *"---"* ]]; then found_splitter=true;
-              elif [[ "$found_splitter" == false ]]; then diagnostics+="$line"$'\n';
+              if [[ "$line" == *"---"* ]]; then found_splitter = true;
+              elif [[ "$found_splitter"  == false ]]; then diagnostics += "$line"$'\n';
               else statistics+="$line"$'\n'; fi
           done <<< "$command_output"
 
@@ -89,26 +91,29 @@ jobs:
         if: github.ref_name != 'main'
         continue-on-error: true
         run: |
-          ::group::Running all
+          echo "::group::Running all"
+          
           cat ./checker/specification/specification.md ./checker/specification/staging.md > all.md
           cargo run -p ezno-parser --example code_blocks_to_script all.md --comment-headers --out ./all.tsx
+
           ./target/release/ezno check all.tsx --timings
-          ::endgroup::
+          echo "::endgroup::"
             
       - name: Run checker performance on large file
         shell: bash
         continue-on-error: true
         run: |
-          ::group::Running large
+          echo "::group::Running large"
+
           cat ./checker/specification/specification.md > main.md
           cargo run -p ezno-parser --example code_blocks_to_script all.md --comment-headers --out ./code.tsx
-
           cat ./code.tsx > large.tsx
           for i in {1..10}; do
             cat ./code.tsx >> large.tsx
           done
+
           ./target/release/ezno check large.tsx --timings --max-diagnostics 0
-          ::endgroup::
+          echo "::endgroup::"
 
       - name: Run parser, minfier/stringer performance
         shell: bash
