--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,15 +38,17 @@ path = "src/main.rs"
 [dependencies]
 # ezno-web-framework = { path = "./plugins/web" }
 
-console = "0.15"
-codespan-reporting = "0.11"
 argh = "0.1"
 base64 = "0.21"
+console = "0.15"
+codespan-reporting = "0.11"
 enum-variants-strings = "0.3"
+glob = "0.3"
+# For `StrComparison` for string comparison
+pretty_assertions = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-json-parser = "0.0.2"
-glob = "0.3"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
