--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -169,7 +169,6 @@ jobs:
 
       - name: Build and test WASM
         if: steps.changes.outputs.src == 'true' || github.ref_name == 'main'
-        # TODO want `continue-on-error: true` but doesn't report error
         run: |
           # TODO `cargo check --target wasm32-unknown-unknown --lib` might be good enough
 
@@ -192,6 +191,12 @@ jobs:
           fi
         working-directory: src/js-cli-and-library
         shell: bash
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: wasm-build
+          path: dist
+          retention-days: 3
 
   fuzzing_parser:
     needs: validity
