--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -195,7 +195,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: wasm-build
-          path: dist
+          path: src/js-cli-and-library/dist
           retention-days: 3
 
   fuzzing_parser:
