--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -93,6 +93,7 @@ jobs:
           cargo run -p ezno-parser --example code_blocks_to_script all.md --comment-headers --out ./all.tsx
 
           ./target/release/ezno check all.tsx --timings || true
+          hyperfine -i './target/release/ezno check all.tsx'
           echo "::endgroup::"
             
       - name: Run checker performance on large file
@@ -108,6 +109,7 @@ jobs:
           done
 
           ./target/release/ezno check large.tsx --timings --max-diagnostics 0 || true
+           hyperfine -i './target/release/ezno check large.tsx'
           echo "::endgroup::"
 
       - name: Run parsing & stringing (minfied) benchmarks
