Small fixes - `var` in for loop treat as `let` - Allow `function` after `return` - Change `examples.yml` to not short-circuit (hopefully)

--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -32,6 +32,7 @@ jobs:
 
       - name: Run checker on example files
         shell: bash
+        continue-on-error: true
         run: |
           files=(
               "https://jsr.io/@yossydev/hello-world/1.0.0/index.ts"
