Update editor to ezno@0.0.22 - And fix issue with getting the text

--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -20,6 +20,6 @@
     "@codemirror/view": "^6.23.0",
     "@lezer/highlight": "^1.2.0",
     "@lezer/javascript": "^1.4.13",
-    "ezno": "=0.0.21"
+    "ezno": "^0.0.22"
   }
 }
