Add comparison document (with generation)

--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run build-comparison",
+    "build-comparison": "node ./comparison/comparison_generator.mjs && cp comparison/assets/* dist/comparison/assets",
     "preview": "vite preview"
   },
   "devDependencies": {
