--- a/.github/workflows/deploy-playground.yml
+++ b/.github/workflows/deploy-playground.yml
@@ -1,4 +1,4 @@
-name: Publish playground to GitHub pages
+name: Publish playground (and comparison) to GitHub pages
 
 on:
   workflow_dispatch
@@ -12,7 +12,7 @@ jobs:
 
     - uses: actions/setup-node@v4
       with:
-        node-version: 18
+        node-version: '20.11.1'
 
     - name: build
       run: |
