--- a/src/playground/package.json
+++ b/src/playground/package.json
@@ -5,11 +5,16 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && npm run build-comparison",
+    "build-comparison": "node ./comparison/comparison_generator.mjs && cp comparison/assets/* dist/comparison/assets",
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.2.12"
+    "vite": "^5.2.12",
+    "lz-string": "^1.5.0",
+    "marked": "^10.0.0",
+    "shiki": "^0.14.7",
+    "typescript": "5.3"
   },
   "dependencies": {
     "@codemirror/commands": "^6.3.3",
@@ -20,7 +25,6 @@
     "@codemirror/view": "^6.23.0",
     "@lezer/highlight": "^1.2.0",
     "@lezer/javascript": "^1.4.13",
-    "ezno": "=0.0.21",
-    "lz-string": "^1.5.0"
+    "ezno": "^0.0.22"
   }
 }
