--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,8 @@ pretty_assertions = "1.3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 simple-json-parser = "0.0.2"
+notify = "6.1.0"
+notify-debouncer-full = "0.3.1"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 # For updating binary
