--- a/.github/workflows/performance-and-size.yml
+++ b/.github/workflows/performance-and-size.yml
@@ -28,11 +28,22 @@ jobs:
       - uses: brndnmtthws/rust-action-cargo-binstall@v1
         with:
           packages: hyperfine
+      
+      - name: Install valgrind
+        run: sudo apt-get install valgrind
 
       - name: Build Ezno
         run: cargo build --release
         env:
           CARGO_PROFILE_RELEASE_DEBUG: true
+
+      - name: Get base ezno
+        if: github.ref_name != 'main'
+        uses: actions/download-artifact@v4
+        continue-on-error: true
+        with:
+          name: latest-checker
+          path: previous-ezno
 
       - name: Run checker performance
         shell: bash
@@ -83,6 +94,8 @@ jobs:
           </details>
           " >> $GITHUB_STEP_SUMMARY
 
+          # Get just statistics: `| rg "Diagnostics:" -A 100`
+
       - name: Run checker performance w/staging
         shell: bash
         if: github.ref_name != 'main'
@@ -112,6 +125,13 @@ jobs:
            hyperfine -i './target/release/ezno check large.tsx'
           echo "::endgroup::"
 
+      - name: Valgrind
+        shell: bash
+        run: |
+          valgrind --log-file=out-mem2.txt ./target/release/ezno check demo.tsx | true
+
+          echo "TODO callgrind"
+
       - name: Run parsing & stringing (minfied) benchmarks
         shell: bash
         run: |
@@ -129,3 +149,11 @@ jobs:
 
               hyperfine "./target/debug/examples/parse input.js" "./target/release/examples/parse input.js"
           done
+
+      - name: Upload checker
+        if: github.ref == 'main'
+        uses: actions/upload-artifact@v4
+        with:
+          name: latest-checker
+          path: target/release/ezno
+          retention-days: 90
